// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements MessageElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (TagsElement))
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (MessageExampleElement
        (MemberElement
          (StringElement)
          (ObjectElement))
        (MemberElement
          (StringElement)
          (ObjectElement))
        (MemberElement
          (StringElement)
          (StringElement))
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements given bindings field of type MessageBindingsElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (MessageBindingsElement)))
`;

exports[`refractor elements given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given correlationId field of type CorrelationIDElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (CorrelationIDElement)))
`;

exports[`refractor elements given correlationId field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given explicit unsupported value of schemaFormat fixed field given payload field of type ReferenceElement should refract payload to generic ObjectElement 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given explicit unsupported value of schemaFormat fixed field given payload field should refract payload to generic ObjectElement 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement)))
`;

exports[`refractor elements given explicit value of schemaFormat fixed field given payload field of type ReferenceElement should refract payload to ReferenceElement 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given explicit value of schemaFormat fixed field given payload field should refract payload to SchemaElement 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (SchemaElement)))
`;

exports[`refractor elements given headers field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given headers field of type SchemaElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (SchemaElement)))
`;

exports[`refractor elements given implicit value of schemaFormat fixed field given payload field of type ReferenceElement should refract payload to ReferenceElement 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements given implicit value of schemaFormat fixed field given payload field should refract payload to SchemaElement 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (SchemaElement)))
`;

exports[`refractor elements given payload field of other type should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;

exports[`refractor elements given traits field contains list of type MessageTraitElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (MessageTraitElement))))
`;

exports[`refractor elements given traits field contains list of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(MessageElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;
